--- a/src/global.css
+++ b/src/global.css
@@ -5,11 +5,11 @@
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  margin: 20px 220px;
+  max-width: 1000px;
   min-height: 100vh;
+  padding: 10px;
+
 }
 *{
   padding: 0;
